lib/services/plugin/native_plugin_runtime.dart


    final writeClipboard = NativeCallable<Void Function(Pointer<Utf8>)>.isolateLocal(
      (Pointer<Utf8> text) {
        if (!manifest.permissions.contains(PluginPermission.clipboard)) return;
        _writeClipboardSync(text.toDartString());
      },
    );
    _closers.add(writeClipboard.close);
    t.writeClipboard = writeClipboard.nativeFunction;

    final freeBuffer = NativeCallable<Void Function(Pointer<Void>)>.isolateLocal((Pointer<Void> p) {
      calloc.free(p);
    });
    _closers.add(freeBuffer.close);
    t.freeBuffer = freeBuffer.nativeFunction;

    return _table!;
  }

  /// 同步屏幕捕获（原生回调场景）
  Uint8List? _captureSync(int x, int y, int w, int h) {
    return _syncCaptureHook?.call(x, y, w, h);
  }

  String? _clipboardSync() => _clipboardHook?.call();
  void _writeClipboardSync(String text) => _writeClipboardHook?.call(text);

  /// 同步捕获钩子（由宿主注入，避免异步 Future）
  static Future<Uint8List?> Function(int, int, int, int)? asyncCapture;
  static Future<String?> Function()? asyncClipboardRead;
  static Future<void> Function(String)? asyncClipboardWrite;

  static Uint8List? Function(int, int, int, int)? _syncCaptureHook;
  static String? Function()? _clipboardHook;
  static void Function(String)? _writeClipboardHook;

  static void installSyncHooks({
    Uint8List? Function(int, int, int, int)? capture,
    String? Function()? readClipboard,
    void Function(String)? writeClipboard,
  }) {
    _syncCaptureHook = capture;
    _clipboardHook = readClipboard;
    _writeClipboardHook = writeClipboard;
  }

  /// 释放函数表与全部 callable
  void dispose() {
    for (final close in _closers) {
      try { close(); } catch (_) {}
    }
    _closers.clear();
    if (_table != null) {
      calloc.free(_table!);
      _table = null;
    }
  }

  static String _buttonName(int button) {
    switch (button) {
      case 0: return 'left';
      case 1: return 'right';
      case 2: return 'middle';
      case 3: return 'x1';
      case 4: return 'x2';
      default: return 'left';
    }
  }

  static String _vkToName(int vk) => 'vk:$vk';
}

// ─── 原生插件实例 ──────────────────────────────────────────

/// 已加载的原生插件实例
class NativePluginInstance {
  final PluginManifest manifest;
  final String libraryPath;
  final String pluginDir;

  DynamicLibrary? _lib;
  bool _isV2 = false;
  bool _loaded = false;
  bool _initialized = false;
  bool _activated = false;
  NativeHostApiTable? _hostTable;

  // 符号
  GetInfoV2Dart? _getInfoV2;
  InitializeV2Dart? _initializeV2;
  ActivateV2Dart? _activateV2;
  DisposeV2Dart? _disposeV2;
  DisposeV2Dart? _deactivateV2;
  ExecuteCommandV2Dart? _executeCommandV2;
  InitializeV1Dart? _initializeV1;
  DisposeV1Dart? _disposeV1;
  ExecuteActionDart? _executeActionV1;
  TemplateMatchDart? _templateMatch;
  OcrDart? _ocr;

  NativePluginInstance({
    required this.manifest,
    required this.libraryPath,
    required this.pluginDir,
  });

  bool get isLoaded => _loaded;
  bool get isActivated => _activated;
  bool get isV2 => _isV2;
  bool get supportsTemplateMatch => _templateMatch != null;
  bool get supportsOcr => _ocr != null;

  /// 打开动态库并绑定符号（不初始化）
  bool open() {
    if (_loaded) return true;
    try {
      _lib = DynamicLibrary.open(libraryPath);
    } catch (_) {
      return false;
    }
    final lib = _lib!;
    // v2 探测
    _getInfoV2 = _lookupOpt(lib, 'plugin_get_info_v2', _bindGetInfoV2);
    _initializeV2 = _lookupOpt(lib, 'plugin_initialize_v2', _bindInitV2);
    _activateV2 = _lookupOpt(lib, 'plugin_activate_v2', _bindActivateV2);
    _deactivateV2 = _lookupOpt(lib, 'plugin_deactivate_v2', _bindDisposeV2);
    _disposeV2 = _lookupOpt(lib, 'plugin_dispose_v2', _bindDisposeV2);
    _executeCommandV2 = _lookupOpt(lib, 'plugin_execute_command_v2', _bindExecCmdV2);
    _isV2 = _initializeV2 != null;

    // v1 兼容符号
    _initializeV1 = _lookupOpt(lib, 'plugin_initialize', _bindInitV1);
    _disposeV1 = _lookupOpt(lib, 'plugin_dispose', _bindDisposeV1);
    _executeActionV1 = _lookupOpt(lib, 'plugin_execute_action', _bindExecActionV1);
    _templateMatch = _lookupOpt(lib, 'plugin_template_match', _bindTemplateMatch);
    _ocr = _lookupOpt(lib, 'plugin_ocr', _bindOcr);

    _loaded = true;
    return true;
  }

  /// 初始化：v2 传入宿主函数表；v1 直接调用
  bool initialize(NativeHostApiTable hostTable) {
    if (!_loaded || _initialized) return _initialized;
    _hostTable = hostTable;
    try {
      if (_isV2) {
        // 身份校验：库声明的 id 必须与 manifest 一致（防止目录伪装）
        final info = _getInfoV2?.call();
        if (info != null && info.ref.id != nullptr) {
          final libId = info.ref.id.toDartString();
          if (libId.isNotEmpty && libId != manifest.id) {
            return false;
          }
        }
        final dirPtr = pluginDir.toNativeUtf8();
        try {
          final rc = _initializeV2!(hostTable.create(), dirPtr);
          if (rc != 0) return false;
        } finally {
          calloc.free(dirPtr);
        }
      } else {
        final init = _initializeV1;
        if (init != null && init() != 0) return false;
      }
      _initialized = true;
      return true;
    } catch (_) {
      return false;
    }
  }

  /// 激活
  bool activate(String activationEvent) {
    if (!_initialized || _activated) return _activated;
    if (_isV2 && _activateV2 != null) {
      final evPtr = activationEvent.toNativeUtf8();
      try {
        if (_activateV2!(evPtr) != 0) return false;
      } finally {
        calloc.free(evPtr);
      }
    }
    // v1 无激活概念，初始化即激活
    _activated = true;
    return true;
  }

  /// 停用（释放原生资源；动态库句柄保留以便重新激活）
  void deactivate() {
    if (!_activated) return;
    try { _deactivateV2?.call(); } catch (_) {}
    _activated = false;
  }

  /// 卸载前清理
  void dispose() {
    deactivate();
    try { _disposeV2?.call(); } catch (_) {}
    try { _disposeV1?.call(); } catch (_) {}
    _hostTable?.dispose();
    _hostTable = null;
    _initialized = false;
    _loaded = false;
    _lib = null;
    _getInfoV2 = null;
    _initializeV2 = null;
    _activateV2 = null;
    _deactivateV2 = null;
    _disposeV2 = null;
    _executeCommandV2 = null;
    _initializeV1 = null;
    _disposeV1 = null;
    _executeActionV1 = null;
    _templateMatch = null;
    _ocr = null;
  }

  /// 执行命令。返回 JSON 字符串结果；失败返回 null / [error]
  ({bool ok, String? result, String? error}) executeCommand(
    String commandId,
    Map<String, dynamic> params,
  ) {
    final exec = _executeCommandV2 ?? _executeActionV1;
    if (exec == null) return (ok: false, result: null, error: '插件未导出命令接口');
    final idPtr = commandId.toNativeUtf8();
    final paramsPtr = jsonEncode(params).toNativeUtf8();
    final outBuf = calloc<Uint8>(65536);
    try {
      outBuf.cast<Uint8>().asTypedList(65536).fillRange(0, 65536, 0);
      final rc = exec(idPtr, paramsPtr, outBuf.cast<Utf8>(), 65536);
      final out = outBuf.cast<Utf8>().toDartString();
      if (rc != 0) {
        return (ok: false, result: null, error: out.isNotEmpty ? out : '错误码 $rc');
      }
      return (ok: true, result: out.isNotEmpty ? out : null, error: null);
    } catch (e) {
      return (ok: false, result: null, error: e.toString());
    } finally {
      calloc.free(idPtr);
      calloc.free(paramsPtr);
      calloc.free(outBuf);
    }
  }

  /// 模板匹配（视觉插件）
  List<({int x, int y, int width, int height, double score})>? templateMatch(
    Uint8List regionPixels, int regionW, int regionH,
    Uint8List tplPixels, int tplW, int tplH,
    double threshold, int maxResults,
  ) {
    if (_templateMatch == null) return null;
    final regionPtr = calloc<Uint8>(regionPixels.length);
    final tplPtr = calloc<Uint8>(tplPixels.length);
    final results = calloc<NativeTemplateMatchResult>(maxResults);
    try {
      regionPtr.asTypedList(regionPixels.length).setAll(0, regionPixels);
      tplPtr.asTypedList(tplPixels.length).setAll(0, tplPixels);
      final count = _templateMatch!(regionPtr, regionW, regionH,
          tplPtr, tplW, tplH, threshold, results, maxResults);
      return List.generate(count.clamp(0, maxResults), (i) {
        final r = results[i];
        return (x: r.x, y: r.y, width: r.width, height: r.height, score: r.score);
      });
    } catch (_) {
      return null;
    } finally {
      calloc.free(regionPtr);
      calloc.free(tplPtr);
      calloc.free(results);
    }
  }

  /// OCR（视觉插件）
  ({String text, int x, int y, int w, int h})? ocr(
    Uint8List pixels, int w, int h, String language,
  ) {
    if (_ocr == null) return null;
    final imgPtr = calloc<Uint8>(pixels.length);
    final langPtr = language.toNativeUtf8();
    final result = calloc<NativeOcrResult>();
    try {
      imgPtr.asTypedList(pixels.length).setAll(0, pixels);
      if (_ocr!(imgPtr, w, h, langPtr, result) != 0) return null;
      final r = result.ref;
      final lines = <String>[];
      for (int i = 0; i < r.lineCount.clamp(0, 64); i++) {
        // lines 是 NativeOcrResult 首字段（偏移 0）；text 是 NativeOcrLine 首字段（偏移 0）
        final textPtr = Pointer<Uint8>.fromAddress(
            result.address + i * sizeOf<NativeOcrLine>());
        final bytes = textPtr.asTypedList(256);
        final end = bytes.indexOf(0);
        lines.add(utf8.decode(end < 0 ? bytes : bytes.sublist(0, end), allowMalformed: true));
      }
      return (text: lines.join('\n'), x: r.totalX, y: r.totalY, w: r.totalWidth, h: r.totalHeight);
    } catch (_) {
      return null;
    } finally {
      calloc.free(imgPtr);
      calloc.free(langPtr);
      calloc.free(result);
    }
  }

  // ─── 符号绑定辅助 ─────────────────────────────────────

  GetInfoV2Dart? _bindGetInfoV2(DynamicLibrary lib) =>
      lib.lookupFunction<GetInfoV2Native, GetInfoV2Dart>('plugin_get_info_v2');
  InitializeV2Dart? _bindInitV2(DynamicLibrary lib) =>
      lib.lookupFunction<InitializeV2Native, InitializeV2Dart>('plugin_initialize_v2');
  ActivateV2Dart? _bindActivateV2(DynamicLibrary lib) =>
      lib.lookupFunction<ActivateV2Native, ActivateV2Dart>('plugin_activate_v2');
  DisposeV2Dart? _bindDisposeV2(DynamicLibrary lib) =>
      lib.lookupFunction<DisposeV2Native, DisposeV2Dart>('plugin_dispose_v2');
  ExecuteCommandV2Dart? _bindExecCmdV2(DynamicLibrary lib) =>
      lib.lookupFunction<ExecuteCommandV2Native, ExecuteCommandV2Dart>('plugin_execute_command_v2');
  InitializeV1Dart? _bindInitV1(DynamicLibrary lib) =>
      lib.lookupFunction<InitializeV1Native, InitializeV1Dart>('plugin_initialize');
  DisposeV1Dart? _bindDisposeV1(DynamicLibrary lib) =>
      lib.lookupFunction<DisposeV1Native, DisposeV1Dart>('plugin_dispose');
  ExecuteActionDart? _bindExecActionV1(DynamicLibrary lib) =>
      lib.lookupFunction<ExecuteActionNative, ExecuteActionDart>('plugin_execute_action');
  TemplateMatchDart? _bindTemplateMatch(DynamicLibrary lib) =>
      lib.lookupFunction<TemplateMatchNative, TemplateMatchDart>('plugin_template_match');
  OcrDart? _bindOcr(DynamicLibrary lib) =>
      lib.lookupFunction<OcrNative, OcrDart>('plugin_ocr');

  T? _lookupOpt<T>(DynamicLibrary lib, String symbol, T? Function(DynamicLibrary) binder) {
    try {
      return binder(lib);
    } catch (_) {
      return null;
    }
  }
}

/// 解析原生库路径
String? resolveNativeLibraryPath(PluginManifest manifest, String pluginDir) {
  final rel = manifest.entry[currentPluginPlatform];
  if (rel == null) return null;
  return '$pluginDir${Platform.pathSeparator}$rel';
}
